--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "bus-ts",
+  "name": "share-travel",
   "version": "0.1.0",
+  "homepage": "https://axel7083.github.io/ShareTravel",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
@@ -25,6 +26,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -56,6 +59,7 @@
     "@types/react-dom": "^18.0.5",
     "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^5.3.3",
+    "gh-pages": "^4.0.0",
     "typescript": "^4.7.2"
   }
 }
